FIX: Some issue

--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ إضافة قسم رمضان.\n۞ إضافة سُنن وبدع كل شهر.\n۞ تحسينات عامة في الأداء والاستقرار.",
+  "What'sNewDetails10": "۞ إضافة قسم المدن لمعرفة مواقيت الصلاة في عدة مدن.\n۞ تحسينات عامة في الأداء والاستقرار.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
