--- a/assets/locales/bn.json
+++ b/assets/locales/bn.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ রমজান বিভাগ যোগ করা হয়েছে।\n۞ প্রতি মাসের সুন্নাহ ও বিদাত যোগ করা হয়েছে।\n۞ সাধারণ কার্যকারিতা ও স্থিতিশীলতার উন্নতি।",
+  "What'sNewDetails10": "۞ একাধিক শহরে নামাজের সময় জানার জন্য শহর বিভাগ যোগ করা হয়েছে।\n۞ সাধারণ কর্মক্ষমতা ও স্থিতিশীলতার উন্নতি।",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
