--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Added Ramadan section.\n۞ Added Sunnah and innovations for each month.\n۞ General performance and stability improvements.",
+  "What'sNewDetails10": "۞ Added cities section to know prayer times in multiple cities.\n۞ General performance and stability improvements.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
