--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Añadida sección de Ramadán.\n۞ Añadidas Sunna e innovaciones de cada mes.\n۞ Mejoras generales en rendimiento y estabilidad.",
+  "What'sNewDetails10": "۞ Añadida sección de ciudades para conocer horarios de oración en múltiples ciudades.\n۞ Mejoras generales en rendimiento y estabilidad.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
