--- a/assets/locales/fil.json
+++ b/assets/locales/fil.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Dinagdag ang seksyon ng Ramadan.\n۞ Dinagdag ang Sunnah at mga innovation ng bawat buwan.\n۞ Pangkalahatang pagpapabuti sa performance at stability.",
+  "What'sNewDetails10": "۞ Dinagdag ang seksyon ng mga lungsod para malaman ang oras ng panalangin sa maraming lungsod.\n۞ Pangkalahatang pagpapabuti sa performance at stability.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
