--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Ditambahkan bagian Ramadan.\n۞ Ditambahkan Sunnah dan bid'ah setiap bulan.\n۞ Perbaikan umum kinerja dan stabilitas.",
+  "What'sNewDetails10": "۞ Ditambahkan bagian kota untuk mengetahui waktu sholat di beberapa kota.\n۞ Perbaikan umum kinerja dan stabilitas.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
