--- a/assets/locales/ku.json
+++ b/assets/locales/ku.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ بەشی ڕەمەزان زیادکراوە۔\n۞ سوننە و بدعەتی هەر مانگێک زیادکراوە۔\n۞ باشترکری گشتی کارئی و جێگیری۔",
+  "What'sNewDetails10": "۞ بەشی شارەکان زیادکراوە بۆ زانینی کاتەکانی نوێژ لە چەندین شار.\n۞ باشترکردنی گشتی کارایی و سەقامگیری.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
