--- a/assets/locales/ms.json
+++ b/assets/locales/ms.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Ditambah bahagian Ramadan.\n۞ Ditambah Sunnah dan bidaah setiap bulan.\n۞ Penambahbaikan umum prestasi dan kestabilan.",
+  "What'sNewDetails10": "۞ Ditambah bahagian bandar untuk mengetahui waktu solat di beberapa bandar.\n۞ Penambahbaikan umum prestasi dan kestabilan.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
