--- a/assets/locales/so.json
+++ b/assets/locales/so.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Waxaa lagu daray qaybta Ramadaan.\n۞ Waxaa lagu daray Sunnada iyo bidcada bil kasta.\n۞ Hagaajin guud oo ku saabsan waxqabadka iyo xasilloonida.",
+  "What'sNewDetails10": "۞ Waxaa lagu daray qaybta magaalooyinka si loo ogaado waqtiyada salaadda magaalooyinka kala duwan.\n۞ Hagaajin guud oo ku saabsan waxqabadka iyo xasilloonida.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
