--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ Ramazan bölümü eklendi.\n۞ Her ayın sünnet ve bidatleri eklendi.\n۞ Genel performans ve kararlılık iyileştirmeleri.",
+  "What'sNewDetails10": "۞ Birden çok şehirde namaz vakitlerini öğrenmek için şehirler bölümü eklendi.\n۞ Genel performans ve kararlılık iyileştirmeleri.",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
