--- a/assets/locales/ur.json
+++ b/assets/locales/ur.json
@@ -486,7 +486,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "What'sNewDetails10": "۞ رمضان کا سیکشن شامل کیا گیا۔\n۞ ہر مہینے کی سنن اور بدعات شامل کی گئیں۔\n۞ کارکردگی اور استحکام میں عام بہتری۔",
+  "What'sNewDetails10": "۞ متعدد شہروں میں نماز کے اوقات جاننے کے لیے شہروں کا سیکشن شامل کیا گیا۔\n۞ کارکردگی اور استحکام میں عام بہتری۔",
   "@What'sNewDetails10": {
     "type": "text",
     "placeholders": {}
