--- a/assets/locales/fil.json
+++ b/assets/locales/fil.json
@@ -496,7 +496,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "sharePrayerTime": "Ibahagi ang Oras ng Panalangin",
+  "sharePrayerTime": "Susunod na Oras ng Panalangin",
   "@sharePrayerTime": {
     "type": "text",
     "placeholders": {}
