--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -496,7 +496,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "sharePrayerTime": "Bagikan Waktu Shalat",
+  "sharePrayerTime": "Waktu Sholat Berikutnya",
   "@sharePrayerTime": {
     "type": "text",
     "placeholders": {}
