--- a/assets/locales/ku.json
+++ b/assets/locales/ku.json
@@ -496,7 +496,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "sharePrayerTime": "کاتی نوێژ هاوبەشی بکە",
+  "sharePrayerTime": "کاتی نوێژی دواتر",
   "@sharePrayerTime": {
     "type": "text",
     "placeholders": {}
