--- a/assets/locales/so.json
+++ b/assets/locales/so.json
@@ -496,7 +496,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "sharePrayerTime": "La wadaag waqtiga salaadda",
+  "sharePrayerTime": "Waqtiga salaadda xigta",
   "@sharePrayerTime": {
     "type": "text",
     "placeholders": {}
