FIX: ramadanMaghribName translate

--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -955,5 +955,10 @@
   "@aboutMonth": {
     "type": "text",
     "placeholders": {}
+  },
+  "ramadanMaghribName": "الإفطار",
+  "@ramadanMaghribName": {
+    "type": "text",
+    "placeholders": {}
   }
 }
