--- a/assets/locales/ms.json
+++ b/assets/locales/ms.json
@@ -685,5 +685,10 @@
   "@aboutMonth": {
     "type": "text",
     "placeholders": {}
+  },
+  "ramadanMaghribName": "Berbuka Puasa",
+  "@ramadanMaghribName": {
+    "type": "text",
+    "placeholders": {}
   }
 }
